--- a/Nico.ipynb
+++ b/Nico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "[450668 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "257865"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "[81740 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "4     Josh Framm                       /m/0jt3p3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "4             5272176  The president is on his way to give a speech. ..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "[450652 rows x 19 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1316,28 +1316,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{of, The, nation}</td>\n",
-       "      <td>{wealthy, of, a}</td>\n",
+       "      <td>{The, nation, of}</td>\n",
+       "      <td>{a, of, wealthy}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>{of, nation, Panem}</td>\n",
-       "      <td>{Capitol, wealthy, a}</td>\n",
+       "      <td>{nation, of, Panem}</td>\n",
+       "      <td>{Capitol, a, wealthy}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>{consists, of, Panem}</td>\n",
-       "      <td>{and, Capitol, wealthy}</td>\n",
+       "      <td>{Capitol, and, wealthy}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>{Induchoodan, is, Poovalli}</td>\n",
-       "      <td>{years, six, prison}</td>\n",
+       "      <td>{prison, six, years}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>{sentenced, Induchoodan, is}</td>\n",
-       "      <td>{years, life, prison}</td>\n",
+       "      <td>{Induchoodan, is, sentenced}</td>\n",
+       "      <td>{life, years, prison}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1345,14 +1345,14 @@
       ],
       "text/plain": [
        "                          Verbs               Attributes\n",
-       "0             {of, The, nation}         {wealthy, of, a}\n",
-       "1           {of, nation, Panem}    {Capitol, wealthy, a}\n",
-       "2         {consists, of, Panem}  {and, Capitol, wealthy}\n",
-       "3   {Induchoodan, is, Poovalli}     {years, six, prison}\n",
-       "4  {sentenced, Induchoodan, is}    {years, life, prison}"
+       "0             {The, nation, of}         {a, of, wealthy}\n",
+       "1           {nation, of, Panem}    {Capitol, a, wealthy}\n",
+       "2         {consists, of, Panem}  {Capitol, and, wealthy}\n",
+       "3   {Induchoodan, is, Poovalli}     {prison, six, years}\n",
+       "4  {Induchoodan, is, sentenced}    {life, years, prison}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
        "257875"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1490,8 +1490,8 @@
        "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
        "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
        "      <td>{\"/m/02n4kr\": \"Mystery\", \"/m/03bxz7\": \"Biograp...</td>\n",
-       "      <td>{The, film, opens}</td>\n",
-       "      <td>{young, as, a}</td>\n",
+       "      <td>{The, opens, film}</td>\n",
+       "      <td>{as, a, young}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1514,8 +1514,8 @@
        "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
        "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
        "      <td>{\"/m/02n4kr\": \"Mystery\", \"/m/03bxz7\": \"Biograp...</td>\n",
-       "      <td>{in, film, opens}</td>\n",
-       "      <td>{young, girl,, a}</td>\n",
+       "      <td>{opens, film, in}</td>\n",
+       "      <td>{girl,, a, young}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1538,8 +1538,8 @@
        "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
        "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
        "      <td>{\"/m/02n4kr\": \"Mystery\", \"/m/03bxz7\": \"Biograp...</td>\n",
-       "      <td>{The, begins, story}</td>\n",
-       "      <td>{young, Jewish, a}</td>\n",
+       "      <td>{The, story, begins}</td>\n",
+       "      <td>{Jewish, a, young}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1562,8 +1562,8 @@
        "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
        "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
        "      <td>{\"/m/02n4kr\": \"Mystery\", \"/m/03bxz7\": \"Biograp...</td>\n",
-       "      <td>{with, begins, story}</td>\n",
-       "      <td>{young, teen,, Jewish}</td>\n",
+       "      <td>{begins, story, with}</td>\n",
+       "      <td>{Jewish, young, teen,}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1586,8 +1586,8 @@
        "      <td>{\"/m/02h40lc\": \"English Language\"}</td>\n",
        "      <td>{\"/m/09c7w0\": \"United States of America\"}</td>\n",
        "      <td>{\"/m/02n4kr\": \"Mystery\", \"/m/03bxz7\": \"Biograp...</td>\n",
-       "      <td>{at, told, being}</td>\n",
-       "      <td>{column, final, one}</td>\n",
+       "      <td>{told, at, being}</td>\n",
+       "      <td>{one, column, final}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1634,8 +1634,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{Michael, Church, pastor}</td>\n",
-       "      <td>{wife, Lindy,, their}</td>\n",
+       "      <td>{Church, Michael, pastor}</td>\n",
+       "      <td>{their, Lindy,, wife}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2105726</th>\n",
@@ -1658,8 +1658,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{is, The, president}</td>\n",
-       "      <td>{give, way, to}</td>\n",
+       "      <td>{The, president, is}</td>\n",
+       "      <td>{way, to, give}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2105727</th>\n",
@@ -1682,8 +1682,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{on, is, president}</td>\n",
-       "      <td>{give, to, a}</td>\n",
+       "      <td>{president, on, is}</td>\n",
+       "      <td>{a, to, give}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2105728</th>\n",
@@ -1706,8 +1706,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{on, his, is}</td>\n",
-       "      <td>{give, speech., a}</td>\n",
+       "      <td>{his, on, is}</td>\n",
+       "      <td>{a, speech., give}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2105729</th>\n",
@@ -1730,8 +1730,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{The, film, {{plot}}}</td>\n",
-       "      <td>{1974,, as, a}</td>\n",
+       "      <td>{{{plot}}, film, The}</td>\n",
+       "      <td>{as, 1974,, a}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1857,22 +1857,22 @@
        "2105729                                                NaN   \n",
        "\n",
        "                       Agent_Verbs              Attributes  \n",
-       "0               {The, film, opens}          {young, as, a}  \n",
-       "1                {in, film, opens}       {young, girl,, a}  \n",
-       "2             {The, begins, story}      {young, Jewish, a}  \n",
-       "3            {with, begins, story}  {young, teen,, Jewish}  \n",
-       "4                {at, told, being}    {column, final, one}  \n",
+       "0               {The, opens, film}          {as, a, young}  \n",
+       "1                {opens, film, in}       {girl,, a, young}  \n",
+       "2             {The, story, begins}      {Jewish, a, young}  \n",
+       "3            {begins, story, with}  {Jewish, young, teen,}  \n",
+       "4                {told, at, being}    {one, column, final}  \n",
        "...                            ...                     ...  \n",
-       "2105725  {Michael, Church, pastor}   {wife, Lindy,, their}  \n",
-       "2105726       {is, The, president}         {give, way, to}  \n",
-       "2105727        {on, is, president}           {give, to, a}  \n",
-       "2105728              {on, his, is}      {give, speech., a}  \n",
-       "2105729      {The, film, {{plot}}}          {1974,, as, a}  \n",
+       "2105725  {Church, Michael, pastor}   {their, Lindy,, wife}  \n",
+       "2105726       {The, president, is}         {way, to, give}  \n",
+       "2105727        {president, on, is}           {a, to, give}  \n",
+       "2105728              {his, on, is}      {a, speech., give}  \n",
+       "2105729      {{{plot}}, film, The}          {as, 1974,, a}  \n",
        "\n",
        "[2105730 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
        "81740"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2242,7 +2242,7 @@
        "[64329 rows x 1 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
        "[64329 rows x 4 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2428,23 +2428,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64329\n",
-      "48108\n",
-      "31759\n"
+      "18310\n",
+      "31759\n",
+      "0.4936964666013773\n",
+      "0.28463057097110167\n"
      ]
     }
    ],
    "source": [
-    "print((df_character_missing_stats['% of missing'] >= 0.5).count())\n",
-    "print(df_character_missing_stats['% of missing'][df_character_missing_stats['% of missing'] >= 0.5].count())\n",
-    "print(df_character_missing_stats['Character Name (excl. NaN)'][df_character_missing_stats['Character Name (excl. NaN)'] == 0].count())\n"
+    "print(df_character_missing_stats['% of missing'][df_character_missing_stats['% of missing'] <= 0.5].count())\n",
+    "print(df_character_missing_stats['Character Name (excl. NaN)'][df_character_missing_stats['Character Name (excl. NaN)'] == 0].count())\n",
+    "print(df_character_missing_stats['Character Name (excl. NaN)'][df_character_missing_stats['Character Name (excl. NaN)'] == 0].count()/64329)\n",
+    "print(df_character_missing_stats['% of missing'][df_character_missing_stats['% of missing'] <= 0.5].count()/64329)\n",
+    "\n",
+    "# The 3rd number is the number of movies for which we are missing 100% of the character names. In other words we are missing all of the characters for roughly 50% of the movies.\n"
    ]
   },
   {
