--- a/Nico.ipynb
+++ b/Nico.ipynb
@@ -2428,14 +2428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18310\n",
+      "9120\n",
       "31759\n",
       "0.4936964666013773\n",
       "0.28463057097110167\n"
@@ -2443,12 +2443,195 @@
     }
    ],
    "source": [
-    "print(df_character_missing_stats['% of missing'][df_character_missing_stats['% of missing'] <= 0.5].count())\n",
+    "print(df_character_missing_stats['% of missing'][df_character_missing_stats['% of missing'] == 0].count())\n",
     "print(df_character_missing_stats['Character Name (excl. NaN)'][df_character_missing_stats['Character Name (excl. NaN)'] == 0].count())\n",
     "print(df_character_missing_stats['Character Name (excl. NaN)'][df_character_missing_stats['Character Name (excl. NaN)'] == 0].count()/64329)\n",
     "print(df_character_missing_stats['% of missing'][df_character_missing_stats['% of missing'] <= 0.5].count()/64329)\n",
     "\n",
+    "\n",
     "# The 3rd number is the number of movies for which we are missing 100% of the character names. In other words we are missing all of the characters for roughly 50% of the movies.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Rows (incl. NaN)</th>\n",
+       "      <th>Character Name (excl. NaN)</th>\n",
+       "      <th>N° of Nans</th>\n",
+       "      <th>% of missing</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wikipedia movie ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3217</th>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3333</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3746</th>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3837</th>\n",
+       "      <td>20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37302868</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37373877</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37478048</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37492363</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37501922</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>37777 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Total Rows (incl. NaN)  Character Name (excl. NaN)  \\\n",
+       "Wikipedia movie ID                                                       \n",
+       "330                                      4                           0   \n",
+       "3217                                    14                          14   \n",
+       "3333                                    14                           0   \n",
+       "3746                                    15                          15   \n",
+       "3837                                    20                          16   \n",
+       "...                                    ...                         ...   \n",
+       "37302868                                 3                           0   \n",
+       "37373877                                 7                           2   \n",
+       "37478048                                 4                           1   \n",
+       "37492363                                 3                           0   \n",
+       "37501922                                 2                           2   \n",
+       "\n",
+       "                     N° of Nans  % of missing  size  \n",
+       "Wikipedia movie ID                                   \n",
+       "330                           4      1.000000     4  \n",
+       "3217                          0      0.000000    14  \n",
+       "3333                         14      1.000000    14  \n",
+       "3746                          0      0.000000    15  \n",
+       "3837                          4      0.200000    20  \n",
+       "...                         ...           ...   ...  \n",
+       "37302868                      3      1.000000     3  \n",
+       "37373877                      5      0.714286     7  \n",
+       "37478048                      3      0.750000     4  \n",
+       "37492363                      3      1.000000     3  \n",
+       "37501922                      0      0.000000     2  \n",
+       "\n",
+       "[37777 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_char_plot = pd.merge(left=df_characters, right=df_plot_summaries, how='inner', on='Wikipedia movie ID')\n",
+    "char_plot = df_char_plot.groupby(['Wikipedia movie ID'])['Character name'].agg(['size'])\n",
+    "#df_char_grouped = char_plot.to_frame()\n",
+    "#df_char_plot\n",
+    "char_plot\n",
+    "pd_innerjoin_plots_missingstats = pd.merge(left=df_character_missing_stats, right=char_plot, how='inner', on='Wikipedia movie ID')\n",
+    "pd_innerjoin_plots_missingstats"
    ]
   },
   {
