--- a/Nico.ipynb
+++ b/Nico.ipynb
@@ -2636,6 +2636,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wikipedia movie ID</th>\n",
+       "      <th>Plot Summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31186339</td>\n",
+       "      <td>The nation of Panem consists of a wealthy Capi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20663735</td>\n",
+       "      <td>Poovalli Induchoodan  is sentenced for six yea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2231378</td>\n",
+       "      <td>The Lemon Drop Kid , a New York City swindler,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>595909</td>\n",
+       "      <td>Seventh-day Adventist Church pastor Michael Ch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5272176</td>\n",
+       "      <td>The president is on his way to give a speech. ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42297</th>\n",
+       "      <td>34808485</td>\n",
+       "      <td>The story is about Reema , a young Muslim scho...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42298</th>\n",
+       "      <td>1096473</td>\n",
+       "      <td>In 1928 Hollywood, director Leo Andreyev  look...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42299</th>\n",
+       "      <td>35102018</td>\n",
+       "      <td>American Luthier focuses on Randy Parsons’ tra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42300</th>\n",
+       "      <td>8628195</td>\n",
+       "      <td>Abdur Rehman Khan , a middle-aged dry fruit se...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42301</th>\n",
+       "      <td>6040782</td>\n",
+       "      <td>1940 - Operation Dynamo has just taken place. ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>42302 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Wikipedia movie ID                                       Plot Summary\n",
+       "0                31186339  The nation of Panem consists of a wealthy Capi...\n",
+       "1                20663735  Poovalli Induchoodan  is sentenced for six yea...\n",
+       "2                 2231378  The Lemon Drop Kid , a New York City swindler,...\n",
+       "3                  595909  Seventh-day Adventist Church pastor Michael Ch...\n",
+       "4                 5272176  The president is on his way to give a speech. ...\n",
+       "...                   ...                                                ...\n",
+       "42297            34808485  The story is about Reema , a young Muslim scho...\n",
+       "42298             1096473  In 1928 Hollywood, director Leo Andreyev  look...\n",
+       "42299            35102018  American Luthier focuses on Randy Parsons’ tra...\n",
+       "42300             8628195  Abdur Rehman Khan , a middle-aged dry fruit se...\n",
+       "42301             6040782  1940 - Operation Dynamo has just taken place. ...\n",
+       "\n",
+       "[42302 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_plot_summaries"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
