--- a/src/milestone2.ipynb
+++ b/src/milestone2.ipynb
@@ -4283,11 +4283,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "318abc87",
    "metadata": {},
    "source": [
-    "Our clustering method yeilded to 33 female and 57 male samples. Before performing PCA analysis, the features are standardized."
+    "Our clustering method yielded to 33 female and 57 male samples. Before performing PCA analysis, the features are standardized."
    ]
   },
   {
