--- a/src/milestone2.ipynb
+++ b/src/milestone2.ipynb
@@ -4283,7 +4283,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "318abc87",
    "metadata": {},
@@ -5037,7 +5036,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e1062a58",
    "metadata": {},
@@ -5076,7 +5074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
